--- a/home.html
+++ b/home.html
@@ -25,13 +25,12 @@
 	<title>Pregnancy</title>
 </head>
 <body>
-<div>
 	<header>
 		<!--  Navigation -->
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 51</a>
+					<a href="#">Pregnancy 52</a>
 				</h1>
 			</div>
 		</div>
@@ -43,22 +42,22 @@
 	            <div class="collapse navbar-collapse" id="navbarNav">
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 1</a>
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 2</a>
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 3</a>
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
 	                    </li>               
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 4</a>
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 5</a>
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 6</a>
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
 	                    </li>            
 	                </ul>
 	            </div> 
@@ -72,22 +71,22 @@
 	            <div class="collapse navbar-collapse" id="navbarNav">
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 2</a>
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 2</a>
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 3</a>
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
 	                    </li>               
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 4</a>
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 5</a>
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 6</a>
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
 	                    </li>            
 	                </ul>
 	            </div> 
@@ -124,28 +123,29 @@
             </div>
         </div>
 	</section>
-</div>
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
 			<h2>Welcome to our website!</h2>
 			<div class="row">
-				<div class="col-md-9">
+				<div class="col-md-8">
 					<article>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						cillum dolore eu fugiat nulla pariatur.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi.</p>
 						<div class="call-to-action">
 							<a class="btn" href="#">Leer Más</a>
 						</div>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<div class="content-image">
-						<img src="http://via.placeholder.com/150x150">
+						<img src="http://via.placeholder.com/380x320">
 					</div>
 				</div>
 			</div>
