--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
-	<link rel="preload" media="screen" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
+	<link rel="preload" media="screen" as="style" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
 	<noscript>
-    	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" media="screen">
   	</noscript>
  	<link rel="preload" media="screen" as="style" href="css/camera.css" onload="this.rel='stylesheet'"/>
 	<noscript>
@@ -18,78 +18,134 @@
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
   	</noscript>
+ 	<link rel="preload" media="screen" as="style" href="css/animate.css" onload="this.rel='stylesheet'"/>
+	<noscript>
+    	<link href="css/animate.css" rel="stylesheet" media="screen">
+  	</noscript>
 	<title>Pregnancy</title>
 </head>
 <body>
-<div>
 	<header>
 		<!--  Navigation -->
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 47</a>
+					<a href="#">Pregnancy 52</a>
 				</h1>
 			</div>
 		</div>
-		<nav class="navbar navbar-default">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li><a href="#">Menú 1</a></li>
-						<li><a href="#">Menú 2</a></li>
-						<li><a href="#">Menú 3</a></li>
-						<li><a href="#">Menú 4</a></li>
-						<li><a href="#">Menú 5</a></li>
-						<li><a href="#">Menú 6</a></li>
-					</ul>
-				</div>
-		
-			</div>
-		</nav>
+	    <nav id="navbar-menu" class="navbar navbar-expand-lg">
+	        <div class="container">
+	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	                <span class="navbar-toggler-icon"></span>
+	            </button>
+	            <div class="collapse navbar-collapse" id="navbarNav">
+	                <ul class="navbar-nav">
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
+	                    </li>               
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
+	                    </li>            
+	                </ul>
+	            </div> 
+	        </div>
+	    </nav>
+	    <nav id="navbar-top" class="navbar fixed-top navbar-expand-lg fadeInDown animated">
+	        <div class="container">
+	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	                <span class="navbar-toggler-icon"></span>
+	            </button>
+	            <div class="collapse navbar-collapse" id="navbarNav">
+	                <ul class="navbar-nav">
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
+	                    </li>               
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
+	                    </li>            
+	                </ul>
+	            </div> 
+	        </div>
+	    </nav>
 	</header>
 	<!-- Section Home One -->
 	<section class="section-home-one">
-       <div id="camera" class="camera-wrap">
-            <div data-src="images/index_slide02.jpg">
-                <div class="fadeIn camera_caption">
-                    <h2>Everything for your health and the health of your baby </h2>
+        <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselFade" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselFade" data-slide-to="1"></li>
+                <li data-target="#carouselFade" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/index_slide01.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
+                        <h1>Take care of yourself and the miracle inside you</h1>
+                    </div>
                 </div>
-            </div>
-            <div data-src="images/index_slide03.jpg">
-                <div class="fadeIn camera_caption">
-                    <h2>Everything you wanted to know about your health & fitness during pregnancy </h2>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/index_slide02.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
+						<h1>Everything for your health and the health of your baby</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/index_slide03.jpg" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
+						<h1>Everything you wanted to know about your health & fitness during pregnancy</h1>
+                    </div>
                 </div>
             </div>
         </div>
 	</section>
-</div>
 	<!-- Section Home Two -->
-	<section class="section-home-two section-spacing">
+	<section class="section-home-two">
 		<div class="container">
 			<h2>Welcome to our website!</h2>
 			<div class="row">
-				<div class="col-md-9">
+				<div class="col-md-8">
 					<article>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<a href="btn btn-primary">Leer Más</a>
+						cillum dolore eu fugiat nulla pariatur.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi.</p>
+						<div class="call-to-action">
+							<a class="btn" href="#">Leer Más</a>
+						</div>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<div class="content-image">
-						<img src="http://via.placeholder.com/150x150">
+						<img src="http://via.placeholder.com/380x320">
 					</div>
 				</div>
 			</div>
@@ -118,7 +174,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -130,7 +191,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -142,7 +208,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -154,7 +225,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -166,7 +242,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -178,7 +259,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -190,7 +276,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -202,7 +293,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -221,10 +317,8 @@
 	</footer>
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type='text/javascript' src='js/plugins/jquery.mobile.customized.min.js'></script>
-	<script type='text/javascript' src='js/plugins/jquery.easing.1.3.js'></script> 
-	<script type='text/javascript' src='js/plugins/camera.min.js'></script> 
-	<script type='text/javascript' src='js/main.js'></script> 
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	<script src="js/plugins/wow.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
