--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 <body>
 	<header>
 		<!--  Navigation -->
-		<div class="brand">
+		<div class="brand d-none d-sm-block">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 52</a>
+					<a href="#">Pregnancy 53</a>
 				</h1>
 			</div>
 		</div>
-	    <nav id="navbar-menu" class="navbar navbar-expand-lg">
+	    <nav id="navbar-menu" class="navbar navbar-expand-lg d-none d-sm-block">
 	        <div class="container">
 	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	                <span class="navbar-toggler-icon"></span>
@@ -63,7 +63,7 @@
 	            </div> 
 	        </div>
 	    </nav>
-	    <nav id="navbar-top" class="navbar fixed-top navbar-expand-lg fadeInDown animated">
+	    <nav id="navbar-top" class="navbar fixed-top navbar-expand-lg d-none d-sm-block fadeInDown animated">
 	        <div class="container">
 	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	                <span class="navbar-toggler-icon"></span>
@@ -92,6 +92,39 @@
 	            </div> 
 	        </div>
 	    </nav>
+	    <!-- Navbar Mobile -->
+    	<nav id="navbar-mobile" class="navbar navbar-light navbar-expand-lg d-block d-sm-none">
+        	<div class="container">
+	            <a class="navbar-brand" href="#">Pregnancy</a>
+
+	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	                <span class="navbar-toggler-icon"></span>
+	            </button>
+
+ 	            <div class="collapse navbar-collapse" id="navbarNav">
+	                <ul class="navbar-nav">
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
+	                    </li>               
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
+	                    </li>            
+	                </ul>
+	            </div>
+        	</div>
+    	</nav>
 	</header>
 	<!-- Section Home One -->
 	<section class="section-home-one">
@@ -103,19 +136,22 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/index_slide01.jpg" alt="First slide">
+                    <img class="d-none d-sm-block w-100" src="images/index_slide01.jpg">
+                    <img class="d-block d-sm-none w-100" src="http://via.placeholder.com/576x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
                         <h1>Take care of yourself and the miracle inside you</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/index_slide02.jpg" alt="First slide">
+                    <img class="d-none d-sm-block w-100" src="images/index_slide02.jpg">
+                    <img class="d-block d-sm-none w-100" src="http://via.placeholder.com/576x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
 						<h1>Everything for your health and the health of your baby</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/index_slide03.jpg" alt="Second slide">
+                    <img class="d-none d-sm-block w-100" src="images/index_slide03.jpg">
+                    <img class="d-block d-sm-none w-100" src="http://via.placeholder.com/576x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
 						<h1>Everything you wanted to know about your health & fitness during pregnancy</h1>
                     </div>
@@ -128,7 +164,7 @@
 		<div class="container">
 			<h2>Welcome to our website!</h2>
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-12 col-md-8">
 					<article>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -143,13 +179,13 @@
 						</div>
 					</article>
 				</div>
-				<div class="col-md-4">
+				<div class="col-12 col-md-4">
 					<div class="content-image">
 						<img src="http://via.placeholder.com/380x320">
 					</div>
 				</div>
 			</div>
-			<div class="full-content-image">
+			<div class="d-none d-sm-block full-content-image">
 				<img src="images/section-home-one-full-image.jpg">
 			</div>
 		</div>
